--- a/src/main/java/com/issuetracker/pages/fulltext/FulltextSearch.html
+++ b/src/main/java/com/issuetracker/pages/fulltext/FulltextSearch.html
@@ -19,14 +19,14 @@
                 <table>
                     <tr>
                         <td>Project</td>
-                        <td><select wicket:id="projectsSelect" style="width:100px"></select></td>
+                        <td><select wicket:id="projectsSelect" style="width:200px" size="5"></select></td>
 
                         <td>Creation date from</td>
                         <td><input type="text" wicket:id="dateFromField"  style="width:100px" /></td>
                     </tr>
                     <tr>
                         <td>Status</td>
-                        <td><select wicket:id="statusesSelect" style="width:100px"></select></td>
+                        <td><select wicket:id="statusesSelect" style="width:200px" size="5"></select></td>
 
                         <td>Creation date to</td>
                         <td><input type="text" wicket:id="dateToField" style="width:100px" /></td>
@@ -34,7 +34,7 @@
                     <tr>
 
                         <td>Type</td>
-                        <td><select wicket:id="issueTypesSelect" style="width:100px"></select></td>
+                        <td><select wicket:id="issueTypesSelect" style="width:200px" size="5"></select></td>
 
                         <td></td>
                         <td></td>
