--- a/src/main/java/com/issuetracker/pages/HomePage.html
+++ b/src/main/java/com/issuetracker/pages/HomePage.html
@@ -1,7 +1,3 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,9 +6,9 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-    <wicket:extend>
+        <wicket:extend>
 
-        <a href="#" wicket:id="loginLink"><span wicket:id="name">[name]</span></a>
+        <!--<a href="#" wicket:id="loginLink"><span wicket:id="name">[name]</span></a>-->
         <!--              
 
         <!--<select wicket:id="projectLinks"></select>-->
@@ -56,6 +52,6 @@ and open the template in the editor.
 
 
 
-    </wicket:extend>
-</body>
+        </wicket:extend>
+    </body>
 </html>
