--- a/src/main/java/com/issuetracker/pages/Login.html
+++ b/src/main/java/com/issuetracker/pages/Login.html
@@ -1,7 +1,3 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.sourceforge.net/">
     <head>
@@ -13,9 +9,9 @@ and open the template in the editor.
 
 <body>
 <wicket:extend>
-
+    <a href="#" wicket:id="homeLink">home</a>
         
-        <h1>Login</h1>
+<!--        <h1>Login</h1>
 
         <div wicket:id="feedback"/>
             
@@ -33,7 +29,7 @@ and open the template in the editor.
     <div wicket:id = "forgotPasswordLink"></div>
 
 
-    <div wicket:id = "signUpLink"></div>
+    <div wicket:id = "signUpLink"></div>-->
 </wicket:extend>
 </body>
 </html>
