--- a/src/main/java/com/issuetracker/pages/PageLayout.html
+++ b/src/main/java/com/issuetracker/pages/PageLayout.html
@@ -1,19 +1,14 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title wicket:id="title"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <div id="header" wicket:id="headerPanel">header</div>
+        <div id="header" wicket:id="headerPanel"/>
         <div id="body">
-           
             <wicket:child/>
         </div>
-        <div id="footer" wicket:id="footerPanel">footer</div>
+        <div id="footer" wicket:id="footerPanel"/>
     </body>
 </html>
