--- a/src/main/java/com/issuetracker/pages/ListProjects.html
+++ b/src/main/java/com/issuetracker/pages/ListProjects.html
@@ -1,24 +1,4 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-    <wicket:extend>
-        <table cellpadding="8">
-            <tr>
-                <td width="200">Name</td>
-                <td width="200">Project Lead</td>
-                <td width="200">&nbsp;</td>
-            </tr>
-            <tr wicket:id="projectList">
-                <td><a href="#" wicket:id="showProject"><span wicket:id="name"></span></a></td>
-                <td><span wicket:id="projectLead"></span></td>
-            </tr>
-        </table>
-
-
-    </wicket:extend>
-</body>
-</html>
+<wicket:extend>
+    <div wicket:id="projectList"/>
+</wicket:extend>
