--- a/src/main/java/com/issuetracker/pages/CreateProject.html
+++ b/src/main/java/com/issuetracker/pages/CreateProject.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-    <wicket:extend>
-        <div wicket:id="feedbackPanel"></div>
-        <form method="post" action="#" wicket:id="insertProjectForm">
-            <table border="0" cellpadding="5">
-                <tr>
-                    <td width="200">Name</td>
-                    <td><input type="text" wicket:id="name" size="30"/></td>
-                </tr>
-                <tr>
-                    <td width="200">Summary</td>
-                    <td><input type="text" wicket:id="summary" size="30"/></td>
-                </tr>
-                <tr>
-                    <td width="200">Version</td>
-                    <td><input type="text" wicket:id="version" size="30"/><input wicket:id="evalButton" type="submit" value="+"></td>
-                </tr>
-                <tr>
-                    <td width="200">Component</td>
-                    <td><input type="text" wicket:id="componentName" size="30"/><input wicket:id="addComponentButton" type="submit" value="+"></td>
-                </tr>
+<wicket:extend>
+    <div wicket:id="feedbackPanel"></div>
+    <form method="post" action="#" wicket:id="insertProjectForm">
+        <table border="0" cellpadding="5">
+            <tr>
+                <td width="200">Name</td>
+                <td><input type="text" wicket:id="name" size="30"/></td>
+            </tr>
+            <tr>
+                <td width="200">Summary</td>
+                <td><input type="text" wicket:id="summary" size="30"/></td>
+            </tr>
+            <tr>
+                <td width="200">Version</td>
+                <td>
+                    <input type="text" wicket:id="version" size="30"/>
+                    <input wicket:id="addVersionButton" type="submit" value="+">
+                </td>
+            </tr>
+            <tr>
+                <td width="200">Component</td>
+                <td>
+                    <input type="text" wicket:id="componentName" size="30"/>
+                    <input wicket:id="addComponentButton" type="submit" value="+">
+                </td>
+            </tr>
+            <tr>
+                <td width="200">Custom Field</td>
+                <td>
+                    <input type="text" wicket:id="customFieldName" size="30"/>
+                    <input wicket:id="addCustomFieldButton" type="submit" value="+">
+                </td>
+            </tr>
 
-                <tr>
-                    <td width="200">&nbsp;</td>
-                    <td><input type="submit" value="Add Project"/></td>
-                </tr>
-            </table>
-        </form>       
+            <tr>
+                <td width="200">&nbsp;</td>
+                <td><input type="submit" value="Add Project"/></td>
+            </tr>
+        </table>
+    </form>       
 
-        <div wicket:id="wmc">
-            <div wicket:id="versionsList"/>
-        </div>
+    <div wicket:id="wmcVersion">
+        <div wicket:id="versionsList"/>
+    </div>
 
-        <div wicket:id="wmcComponent">
-            <div wicket:id="componentsList"/>
-        </div>
+    <div wicket:id="wmcComponent">
+        <div wicket:id="componentsList"/>
+    </div>
 
-        <span wicket:id="projectName"/>
-        <div wicket:id="projectList"/>
+    <div wicket:id="wmcCustomField">
+        <div wicket:id="customFieldsList"/>
+    </div>
 
-    </wicket:extend>
-</body>
-</html>
+    <span wicket:id="projectName"/>
+    <div wicket:id="projectList"/>
+
+</wicket:extend>
