--- a/src/main/java/com/issuetracker/pages/ProjectDetail.html
+++ b/src/main/java/com/issuetracker/pages/ProjectDetail.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    </head>
-    <body>
-    <wicket:extend>
-        <h3><span wicket:id="name">[project name]</span>  </h3>      
-        <table border="1" cellpadding="8">
-            <tr>
-                <td width="200">Versions</td>
-            </tr>
-            <tr wicket:id="projectVersionListView">
-                <td><span wicket:id="versionName"></span></td>
-
-            </tr>
-        </table>       
-
-        <table border="1" cellpadding="8">
-            <tr>
-                <td width="200">Components</td>
-            </tr>
-            <tr wicket:id="projectComponentListView">
-                <td><span wicket:id="componentName"></span></td>
-
-            </tr>
-        </table>
-        <div wicket:id="cfListView"/>
-        <span wicket:id="cfHeader"></span>
-        <form wicket:id="form">
-            <input type="text" wicket:id="cfName" />
-
-            <input type="submit" value="Done"/>
+<wicket:extend>
+    <h3><span wicket:id="name">[project name]</span>  </h3>      
+    <div wicket:id="summary"/>
+    <div>
+        <div wicket:id="wmcVersion">
+            <div wicket:id="versionsList"/>
+        </div>
+        <form wicket:id="projectVersionForm">
+            <input type="text" wicket:id="version" size="25"/>
+            <input type="submit" value="Add Version"/>
         </form>
-    </wicket:extend>
-</body>
-</html>
+    </div>
+    <div>
+        <div wicket:id="wmcComponent">
+            <div wicket:id="componentsList"/>
+        </div>
+        <form wicket:id="projectComponentForm">
+            <input type="text" wicket:id="component" size="25"/>
+            <input type="submit" value="Add Component"/>
+        </form>
+    </div>
+    <div>
+        <div wicket:id="wmcCustomField">
+            <div wicket:id="customFieldsList"/>
+        </div>
+        <form wicket:id="projectCustomFieldForm">
+            <input type="text" wicket:id="customField" size="25"/>
+            <input type="submit" value="Add Custom Field"/>
+        </form>
+    </div>
+</wicket:extend>
