--- a/src/main/java/com/issuetracker/pages/issue/IssueDetail.html
+++ b/src/main/java/com/issuetracker/pages/issue/IssueDetail.html
@@ -12,6 +12,7 @@ and open the template in the editor.
     <wicket:extend>
         <a wicket:id="link"><span wicket:id="project"></span></a>
         <h2><span wicket:id="name"></span></h2>
+        <div><a href="#" wicket:id="permissions">[permissions]</a></div>
         <span wicket:id="summary"></span><br/>
         <span wicket:id="description"></span><br/>
         <br/>
