--- a/src/main/java/com/issuetracker/pages/permissions/IssuePermission.html
+++ b/src/main/java/com/issuetracker/pages/permissions/IssuePermission.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <wicket:extend>
     <h3 wicket:id="permissionTitle"/>
-    <div><a href="#" wicket:id="projectDetail">[go back to project]</a></div>
+    <div><a href="#" wicket:id="issueDetail">[go back to issue]</a></div>
     <br/>
-    Restrict visibility of the project:
-    <div wicket:id="visibilityProjectForm"/>
-    <hr/>
     <div wicket:id="permissions">
         <div wicket:id="permission"/>
     </div>
